manifests/apps/unmanic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmanic
  labels:
    app: unmanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unmanic
  template:
    metadata:
      labels:
        app: unmanic
    spec:
      securityContext:
        runAsUser: 65534 # "nobody" user in samba container
        runAsGroup: 65534
        fsGroup: 65534
      containers:
      - name: unmanic
        image: josh5/unmanic:0.3.0 # renovate: docker=josh5/unmanic
        command: ["/usr/local/bin/unmanic-service"]
        ports:
        - containerPort: 8888
          protocol: TCP
          name: http
        volumeMounts:
        - name: unmanic-config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
        - name: unmanic-config
          persistentVolumeClaim:
            claimName: unmanic-config
        - name: media
          hostPath:
            path: /var/mnt/bulk-storage/shares/media
            type: Directory
