manifests/apps/unmanic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic-service
spec:
  selector:
    app: unmanic
  type: ClusterIP
  ports:
    - name: unmanic-port
      port: 8888
      targetPort: 8888
